--- a/app/src/components/slide.css
+++ b/app/src/components/slide.css
@@ -7,36 +7,46 @@
     background-position: center;
     background-size: cover;
     position: relative;
+    animation: show 0.5s;
+}
+
+@keyframes show {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    } 
 }
 
 .slideChild {
     display: flex;
     flex-direction: column;
     text-align: center;
-    overflow: hidden;
-    max-width: 40vw;
-}
-
-.slideShow {
-    opacity: 1;
-    animation: slideShow 0.5s;
+    max-width: 60vw;
+    animation: slideShow 1s;
+    position: absolute;
 }
 
 @keyframes slideShow {
     0% {
+        transform: translateY(30px);
         opacity: 0;
     }
-    100% {
+    75% {
         opacity: 1;
+    }
+    100% {
+        transform: translateY(0);
     }
 }
 
-.slideHide {
+.hide {
     opacity: 0;
-    animation: slideHide 0.5s;
+    animation: hide 0.5s;
 }
 
-@keyframes slideHide {
+@keyframes hide {
     0% {
         opacity: 1;
     }
@@ -46,7 +56,7 @@
 }
 
 .leftAlign {
-    left: 25%;
+    left: 10%;
 }
 
 .centerAlign {
@@ -57,7 +67,7 @@
 }
 
 .rightAlign {
-    left: 75%;
+    right: 10%;
 }
 
 .glassWhiteTheme {
@@ -66,6 +76,27 @@
     border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.3) 0 10px 30px 0;
     color: black;
+}
+
+.glassWhiteTheme::after {
+    animation: pulseWhite 1s;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    z-index: -1;
+    border-radius: 10px;
+}
+
+@keyframes pulseWhite {
+    0% {
+        box-shadow:  rgba(255, 255, 255, 0.8) 0 0 0 0;
+    }
+    100% {
+        box-shadow:  rgba(255, 255, 255, 0) 0 0 0 20px;
+    }
 }
 
 .glassWhiteTheme .slideTopper {
@@ -95,6 +126,8 @@
 
 .slideTopper {
     padding: 15px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .slideHeader {
@@ -114,6 +147,21 @@
     font-size: 1.25rem;
     font-weight: 500;
     padding: 15px;
+}
+
+.slideListParent {
+    font-size: 20px;
+    font-weight: bold;
+    gap: 10px;
+    padding: 10px;
+    padding-left: 30px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+.slideListParent li {
+    text-align: left;
 }
 
 .slideImage {
